--- a/index.html
+++ b/index.html
@@ -144,6 +144,18 @@
       border-radius: 50%;
       background-color: rgba(255,255,255,0.8);
     }
+
+    #map-title-banner {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1500;
+      width: 65vw; /* 필요시 조정 가능 */
+      max-width: 300px;
+      pointer-events: none; /* 클릭 방해 없도록 */
+    }
+
   </style>
 </head>
 <body>
@@ -162,6 +174,8 @@
   </div>
 
   <div id="map"></div>
+
+  <img id="map-title-banner" src="mt1.png" alt="2025 해봄 타이틀" />
 
   <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoidGFrZWJ1Y2hpaGFydSIsImEiOiJjbThyOWk5bnowamx1MmtzY3NqM3h4NGg1In0.z8tX24NQPHkZY_GwSLsc9Q';
@@ -268,11 +282,14 @@
       });
     }
 
-    function updateZoomHint() {
-      const zoom = map.getZoom();
-      const hint = document.getElementById('zoom-hint');
-      hint.style.display = zoom >= 16.5 ? 'none' : 'block';
-    }
+function updateZoomHint() {
+  const zoom = map.getZoom();
+  const hint = document.getElementById('zoom-hint');
+  const titleBanner = document.getElementById('map-title-banner');
+
+  hint.style.display = zoom >= 16.5 ? 'none' : 'block';
+  titleBanner.style.display = zoom >= 16.4 ? 'none' : 'block';
+}
 
     function showPopup(markerData, isImageExpanded = false) {
       if (activePopup) activePopup.remove();
