--- a/index.html
+++ b/index.html
@@ -400,7 +400,13 @@
       showPopupIfNearby(longitude, latitude);
     }, error => {
       console.error("Geolocation error:", error);
-      alert("📍 위치 권한이 필요합니다. 설정에서 허용해 주세요.");
+      if (error.code === 1) {
+        alert("📍 위치 권한이 필요합니다.\n설정에서 허용해 주세요.");
+      } else if (error.code === 2) {
+        alert("🌐 위치 정보를 가져올 수 없습니다.\n인터넷 연결을 확인해 주세요.");
+      } else if (error.code === 3) {
+        alert("⏳ 위치 요청 시간이 초과되었습니다.");
+      }
     }, {
       enableHighAccuracy: true,
       maximumAge: 10000,
