--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     #prologue {
       position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
-      background: #000; display: flex; justify-content: center;
+      background: #448e7a; display: flex; justify-content: center;
       align-items: center; flex-direction: column; z-index: 2000;
     }
     #prologue img {
