--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       align-items: center; flex-direction: column; z-index: 2000;
     }
     #prologue img {
-      width: 100%; height: 100%; object-fit: fill;
+      width: 100%; height: 100%; object-fit: cover;
     }
     #enter-button {
       position: absolute;
@@ -125,14 +125,15 @@
       max-width: 100%;
       max-height: 100%;
       border-radius: 12px;
+      object-fit: cover;
       opacity: 0;
       transition: opacity 0.1s ease;
     }
     
     .popup-close {
       position: absolute;
-      top: 6px;
-      right: 6px;
+      top: 10px;
+      right: 10px;
       font-size: 35px;
       font-weight: bold;
       color: #888;
