--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       align-items: center; flex-direction: column; z-index: 2000;
     }
     #prologue img {
-      width: 100%; height: 100%; object-fit: cover;
+      max-width: 70vw;
+      max-height: 70vh;
+      object-fit: contain;
     }
     #enter-button {
       position: absolute;
@@ -122,10 +124,10 @@
     }
     
     #popup-image {
-      max-width: 100%;
-      max-height: 100%;
+      max-width: 70vw;
+      max-height: 70vh;
       border-radius: 12px;
-      object-fit: cover;
+      object-fit: contain;
       opacity: 0;
       transition: opacity 0.1s ease;
     }
