--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.1/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.1.1/mapbox-gl.css" rel="stylesheet" />
   <style>
-    body, html { margin: 0; padding: 0; height: 100dvh; }
+    body, html { margin: 0; padding: 0; height: 100dvh; overflow: hidden;}
     #map { display: none; width: 100vw; height: 100vh; }
     #map.visible { display: block; }
 
+    
     #prologue {
       position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
       background: #448e7a; display: flex; justify-content: center;
       align-items: center; flex-direction: column; z-index: 2000;
     }
     #prologue img {
-      max-width: 70vw;
-      max-height: 70vh;
-      object-fit: contain;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
+
     #enter-button {
       position: absolute;
       bottom: 40px;
