--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     #prologue img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
     }
 
     #enter-button {
