--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
       background: #448e7a; display: flex; justify-content: center;
       align-items: center; flex-direction: column; z-index: 2000;
     }
+    
     #prologue img {
-      width: 100%;
-      height: 100%;
+      max-width: 100vw;
+      max-height: 100vh;
+      width: auto;
+      height: auto;
       object-fit: contain;
     }
 
