--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
 
     
     #prologue {
-      position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
-      background: #448e7a; display: flex; justify-content: center;
-      align-items: center; flex-direction: column; z-index: 2000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background: #448e7a;
+      width: 100vw;
+      height: 100vh;
     }
-    
-    #prologue img {
-      max-width: 100vw;
-      max-height: 100vh;
-      width: auto;
-      height: auto;
-      object-fit: contain;
-    }
+
+#prologue img {
+  max-width: 100vw;
+  max-height: 100vh;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  display: block;
+  margin: auto;
+}
 
     #enter-button {
       position: absolute;
