--- a/index.html
+++ b/index.html
@@ -14,24 +14,18 @@
 
     
     #prologue {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      background: #448e7a;
-      width: 100vw;
-      height: 100vh;
+      position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
+      background: #448e7a; display: flex; justify-content: center;
+      align-items: center; flex-direction: column; z-index: 2000;
     }
-
-#prologue img {
-  max-width: 100vw;
-  max-height: 100vh;
-  width: auto;
-  height: auto;
-  object-fit: contain;
-  display: block;
-  margin: auto;
-}
+    
+    #prologue img {
+      max-width: 100vw;
+      max-height: 100vh;
+      width: auto;
+      height: auto;
+      object-fit: contain;
+    }
 
     #enter-button {
       position: absolute;
