--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
     }
     
     #prologue img {
-      max-width: 100vw;
-      max-height: 100vh;
-      width: auto;
-      height: auto;
-      object-fit: contain;
+      width: 100vw;
+      height: 100vh;
+      object-fit: contain; /* 비율 유지하며 보여주기 */
+      display: block;
     }
 
     #enter-button {
