--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     #prologue img {
       width: 100vw;
       height: 100vh;
-      object-fit: contain; /* 비율 유지하며 보여주기 */
+      object-fit: fill;
       display: block;
     }
 
