--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     #prologue img {
       width: 100vw;
       height: 100vh;
-      object-fit: fill;
+      object-fit: cover; /* 비율 유지 + 꽉 채움 */
+      object-position: center center; /* 중앙 정렬 */
       display: block;
     }
 
