--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     
     #prologue img {
       width: 100vw;
-      height: 100vh;
-      object-fit: cover; /* 비율 유지 + 꽉 채움 */
-      object-position: center center; /* 중앙 정렬 */
+      height: 900vh;
+      object-fit: fill;
       display: block;
     }
 
