--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     #prologue img {
       width: 100vw;
-      height: 900vh;
+      height: 90vh;
       object-fit: fill;
       display: block;
     }
@@ -142,14 +142,13 @@
       right: 10px;
       font-size: 35px;
       font-weight: bold;
-      color: #888;
+      color: #fff;
       cursor: pointer;
       width: 40px;
       height: 40px;
       line-height: 40px;
       text-align: center;
       border-radius: 50%;
-      background-color: rgba(255,255,255,0.8);
     }
 
     #map-title-banner {
