--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     
     #prologue img {
       width: 100vw;
-      height: 95vh;
-      object-fit: fill;
+      height: 100vh;
+      object-fit: cover;
+      object-position: center;
       display: block;
+      transform: translateY(10px);
     }
 
     #enter-button {
@@ -50,7 +52,6 @@
       background: rgba(255, 255, 255, 0.7);
       color: #448e7a;
       font-size: 18px;
-      padding: 12px 20px;
       border: none;
       border-radius: 8px;
       font-weight: bold;
