--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     }
     
     #prologue img {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
       object-position: center;
       display: block;
