--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     #prologue img {
       width: 100vw;
       height: 100vh;
-      object-fit: cover;
+      object-fit: fill;
       object-position: center;
       display: block;
       transform: translateY(10px);
