--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       object-fit: fill;
       object-position: center;
       display: block;
-      transform: translateY(-60px);
+      transform: translateY(-50px);
     }
 
     #enter-button {
       position: absolute;
-      bottom: 40px;
+      bottom: 30px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(255, 255, 255, 0.9);
@@ -46,12 +46,13 @@
 
     #zoom-hint {
       position: absolute;
-      bottom: 40px;
+      bottom: 30px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(255, 255, 255, 0.7);
       color: #448e7a;
       font-size: 18px;
+      pading: 12px 20px;
       border: none;
       border-radius: 8px;
       font-weight: bold;
