--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     #enter-button {
       position: absolute;
-      bottom: 30px;
+      bottom: 25px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(255, 255, 255, 0.9);
@@ -46,13 +46,13 @@
 
     #zoom-hint {
       position: absolute;
-      bottom: 30px;
+      bottom: 25px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(255, 255, 255, 0.7);
       color: #448e7a;
       font-size: 18px;
-      pading: 12px 20px;
+      padding: 12px 20px;
       border: none;
       border-radius: 8px;
       font-weight: bold;
