--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     .popup-image-wrapper {
       position: relative;
       padding: 0px;
+      transform: translateY(-20px);
       border-radius: 16px;
       box-shadow: 0 4px 16px rgba(0,0,0,0.3);
       max-width: 90vw;
@@ -139,9 +140,9 @@
     
     .popup-close {
       position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 35px;
+      top: 8px;
+      right: 8px;
+      font-size: 40px;
       font-weight: bold;
       color: #fff;
       cursor: pointer;
