--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
       },
       center: [126.8355, 37.5700],
       zoom: 15.6,
-      bearing: 314
+      bearing: 314,
+      minZoom: 14
     });
 
     let isUserInteracting = false;
