--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
       center: [126.8355, 37.5700],
       zoom: 15.6,
       bearing: 314,
-      minZoom: 14
+      minZoom: 14,
+      maxZoom: 18 
     });
 
     let isUserInteracting = false;
