--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         layers: [{
           id: 'background',
           type: 'background',
-          paint: { 'background-color': '#448e7a' }
+          paint: { 'background-color': '#22A18D' }
         }]
       },
       center: [126.8355, 37.5700],
