--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
       line-height: 40px;
       text-align: center;
       border-radius: 50%;
+      background: rgba(0,0,0,0.3);
     }
 
     #map-title-banner {
