--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       background: #5ecfbd; display: flex; justify-content: center;
       align-items: center; flex-direction: column; z-index: 2000;
       opacity: 0;
-      transition: opacity 1.6s ease;
+      transition: opacity 1.6s ease-in-out;
       pointer-events: none;
     }
     #epilogue img {
