--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@
     let isUserInteracting = false;
     let userMarker = null;
     let activePopup = null;
+    let epilogueSeen = false; 
     const markerElements = [];
     const blueDotMarkers = [];
 
