--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       z-index: 2001;
       transition: opacity 0.5s ease;
+      white-space: nowrap;
     }
 
     #epilogue.visible {
@@ -79,6 +80,7 @@
       opacity: 0;
       transition: opacity 0.4s ease;
       z-index: 2002;
+      white-space: nowrap;
     }
     #epilogue-again-button.show {
       display: block;
@@ -113,6 +115,7 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       z-index: 2001;
       transition: opacity 0.5s ease;
+      white-space: nowrap;
     }
 
     #zoom-hint {
