--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
       font-weight: bold;
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       z-index: 1500;
+      white-space: nowrap;
     }
 
     .custom-marker {
