--- a/index.html
+++ b/index.html
@@ -358,7 +358,12 @@
       zoom: 15.8,
       bearing: 314,
       minZoom: 15,
-      maxZoom: 19.3
+      maxZoom: 19.3,
+
+      maxBounds: [
+      [126.8300, 37.5655], // Southwest corner
+      [126.8410, 37.5745]  // Northeast corner
+    ]
     });
 
     let isUserInteracting = false;
