--- a/index.html
+++ b/index.html
@@ -455,6 +455,12 @@
         titleBanner.classList.remove('hidden');
       }
     
+      if (zoom < 16.4 && activePopup) {
+        activePopup.remove();
+        activePopup = null;
+      }
+    }
+
       if (epilogueBtnAgain) {
         const shouldShow =
           zoom >= 16.6 &&
