--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.1/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.1.1/mapbox-gl.css" rel="stylesheet" />
-  <div id="bgm-banner" style="display: none;">botanicpark seoul-haebom festival_BGM</div>
+  <div id="bgm-banner" style="display: none;">서울식물원의 봄_BGM</div>
   <style>
     body, html { margin: 0; padding: 0; height: 100dvh; overflow: hidden; overscroll-behavior: none;}
     #map { display: none; width: 100vw; height: 100vh; }
@@ -18,7 +18,7 @@
       top: 10px; /* 상단 위치 */
       left: 100%; /* 처음은 오른쪽 바깥에서 시작 */
       white-space: nowrap;
-      color: #448e7a; /* 네가 쓴 버튼 계열 색상 */
+      color: #fff; /* 네가 쓴 버튼 계열 색상 */
       font-size: 18px;
       font-weight: bold;
       z-index: 1600;
