--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.1/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.1.1/mapbox-gl.css" rel="stylesheet" />
   <div id="bgm-banner">
-    <span>서울식물원의 봄_BGM&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span>서울식물원의 봄_BGM&nbsp;&nbsp;&nbsp;&nbsp;</span> <!-- 두 번! -->
+    <span>서울식물원의 봄_BGM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <span>서울식물원의 봄_BGM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> <!-- 두 번! -->
   </div>
   <style>
     body, html { margin: 0; padding: 0; height: 100dvh; overflow: hidden; overscroll-behavior: none;}
