--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.1/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.1.1/mapbox-gl.css" rel="stylesheet" />
-  <div id="bgm-banner">
-    <span>서울식물원의 봄_BGM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span>서울식물원의 봄_BGM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> <!-- 두 번! -->
-  </div>
+  <div id="bgm-banner" style="display: none;">서울식물원의 봄_BGM</div>
   <style>
     body, html { margin: 0; padding: 0; height: 100dvh; overflow: hidden; overscroll-behavior: none;}
     #map { display: none; width: 100vw; height: 100vh; }
